# todolist_rust_axum

./: .gitignore  Cargo.toml  README.md
src/: config.rs  general_tools.rs  main.rs  models.rs  utils.rs
src/controllers/: login.rs  mod.rs  register.rs  todo.rs
src/database/: connect.rs  mod.rs  user_auth.rs
src/extractors/: headers.rs  json.rs  mod.rs
src/handlers/: intro.rs  login.rs  mod.rs  register.rs  todo.rs
