[package]
name = "todolist_rust_axum"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0 

[profile.release]
opt-level = 3   
lto = true
codegen-units = 1

[dependencies]
axum = "0.7"  
tokio = { version = "1", features = ["full"] }    
##sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "chrono", "json" ] }   # for mysql db
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls", "chrono", "json", "macros" ] }   # for mysql db

dotenvy = "0.15"
anyhow = "1"
serde = { version = "1", features = ["derive"] }  
serde_json = "1"                                  
jsonwebtoken = "9"  
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
